--- a/libevent/libevent/event.3
+++ b/libevent/libevent/event.3
@@ -198,7 +198,9 @@ The file descriptor passed will be 0, and the event type will be
 .Va EV_TIMEOUT .
 .Pp
 .Sh SEE ALSO
-.Xr timeout 9
+.Xr timeout 9 ,
+.Xr select 2 ,
+.Xr kqueue 2
 .Sh HISTORY
 The
 .Nm event
