--- a/libevent/libevent/event.3
+++ b/libevent/libevent/event.3
@@ -27,11 +27,12 @@
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .Dd June 23, 1996
-.Dt TIMEOUT 9
+.Dt EVENT 3
 .Os
 .Sh NAME
 .Nm event_init ,
 .Nm event_dispatch ,
+.Nm event_loop ,
 .Nm event_set ,
 .Nm event_add ,
 .Nm event_del ,
@@ -49,6 +50,8 @@
 .Fn "event_init"
 .Ft int
 .Fn "event_dispatch"
+.Ft int
+.Fn "event_loop" "int flags"
 .Ft void
 .Fn "event_set" "struct event *ev" "int fd" "short event" "void (*fn)(int, short, void *)" "void *arg"
 .Ft int
@@ -106,7 +109,8 @@ to a callback function.  After the signal handler sets
 .Va event_gotsig ,
 .Nm event_dispatch
 will execute the callback function to process received signals.  The
-callback can return -1 to indicate an error to the
+callback returns 1 when no events are registered any more.  It can
+return -1 to indicate an error to the
 .Nm event
 library, causing
 .Fn event_dispatch
@@ -114,6 +118,15 @@ to terminate with
 .Va errno
 set to
 .Er EINTR.
+.Pp
+The
+.Nm event_loop
+function provides an interface for single pass execution of pending
+events.  The flags
+.Va EVLOOP_ONCE
+and
+.Va EVLOOP_NONBLOCK
+are recognized.
 .Pp
 It is the responsibility of the caller to provide these functions with
 pre-allocated event structures.
@@ -225,6 +238,11 @@ and
 are abbreviations for common situations where only a timeout is required.
 The file descriptor passed will be 0, and the event type will be
 .Va EV_TIMEOUT .
+.Pp
+It is possible to disable support for
+.Va kqueue
+but setting the environment variable
+.Va EVENT_NOKQUEUE .
 .Pp
 .Sh RETURN VALUES
 Upon successful completion
