--- a/linux/automake/helloworld-man/man/hello.8
+++ b/linux/automake/helloworld-man/man/hello.8
@@ -17,4 +17,4 @@ returns a magic value that depends on the system and, some
 say, on the current likes of God.
 .\"
 .Sh SEE ALSO
-.Xr fuck 8
+.Xr world 8
