--- a/linux/automake/helloworld-man/man/helloworld.8
+++ b/linux/automake/helloworld-man/man/helloworld.8
@@ -1,8 +1,8 @@
 .Dd 21 Nov 2005
-.Dt HELLOFUCK 8
+.Dt HELLOWORLD 8
 .Os BSD
 .Sh NAME
-.Nm hellofuck.sh
+.Nm helloworld.sh
 .Nd a refined decision support system for your day
 .\"
 .Sh SYNOPSIS 
@@ -14,4 +14,4 @@ decision variables are not known to humans, but many people report an improvemen
 .\"
 .Sh SEE ALSO
 .Xr hello 8 ,
-.Xr fuck 8
+.Xr world 8
