--- a/linux/autotool/MinGW2/b64/lib/.deps/base64.Po
+++ b/linux/autotool/MinGW2/b64/lib/.deps/base64.Po
@@ -1,110 +1,43 @@
-base64.o: base64.c /usr/include/stdc-predef.h ../config.h base64.h \
- stddef.h /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stddef.h \
- /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdbool.h \
- /usr/include/stdlib.h /usr/include/features.h /usr/include/sys/cdefs.h \
- /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
- /usr/include/gnu/stubs-64.h /usr/include/bits/waitflags.h \
- /usr/include/bits/waitstatus.h /usr/include/endian.h \
- /usr/include/bits/endian.h /usr/include/bits/byteswap.h \
- /usr/include/bits/types.h /usr/include/bits/typesizes.h \
- /usr/include/bits/byteswap-16.h /usr/include/xlocale.h \
- /usr/include/sys/types.h /usr/include/time.h /usr/include/sys/select.h \
- /usr/include/bits/select.h /usr/include/bits/sigset.h \
- /usr/include/bits/time.h /usr/include/sys/sysmacros.h \
- /usr/include/bits/pthreadtypes.h /usr/include/alloca.h \
- /usr/include/bits/stdlib-float.h \
- /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/limits.h \
- /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/syslimits.h \
- /usr/include/limits.h /usr/include/bits/posix1_lim.h \
- /usr/include/bits/local_lim.h /usr/include/linux/limits.h \
- /usr/include/bits/posix2_lim.h /usr/include/bits/xopen_lim.h \
- /usr/include/bits/stdio_lim.h string.h /usr/include/string.h \
- /usr/include/bits/string.h /usr/include/bits/string2.h
-
-/usr/include/stdc-predef.h:
+base64.o: base64.c ../config.h base64.h \
+ c:\mingw\lib\gcc\mingw32\9.2.0\include\stddef.h \
+ c:\mingw\lib\gcc\mingw32\9.2.0\include\stdbool.h \
+ c:\mingw\include\stdlib.h c:\mingw\include\_mingw.h \
+ c:\mingw\include\msvcrtver.h c:\mingw\include\w32api.h \
+ c:\mingw\include\sdkddkver.h c:\mingw\include\features.h \
+ c:\mingw\include\errno.h c:\mingw\include\alloca.h \
+ c:\mingw\include\limits.h string.h c:\mingw\include\string.h \
+ c:\mingw\include\strings.h c:\mingw\include\wchar.h
 
 ../config.h:
 
 base64.h:
 
-stddef.h:
+c:\mingw\lib\gcc\mingw32\9.2.0\include\stddef.h:
 
-/usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stddef.h:
+c:\mingw\lib\gcc\mingw32\9.2.0\include\stdbool.h:
 
-/usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdbool.h:
+c:\mingw\include\stdlib.h:
 
-/usr/include/stdlib.h:
+c:\mingw\include\_mingw.h:
 
-/usr/include/features.h:
+c:\mingw\include\msvcrtver.h:
 
-/usr/include/sys/cdefs.h:
+c:\mingw\include\w32api.h:
 
-/usr/include/bits/wordsize.h:
+c:\mingw\include\sdkddkver.h:
 
-/usr/include/gnu/stubs.h:
+c:\mingw\include\features.h:
 
-/usr/include/gnu/stubs-64.h:
+c:\mingw\include\errno.h:
 
-/usr/include/bits/waitflags.h:
+c:\mingw\include\alloca.h:
 
-/usr/include/bits/waitstatus.h:
-
-/usr/include/endian.h:
-
-/usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
-
-/usr/include/bits/types.h:
-
-/usr/include/bits/typesizes.h:
-
-/usr/include/bits/byteswap-16.h:
-
-/usr/include/xlocale.h:
-
-/usr/include/sys/types.h:
-
-/usr/include/time.h:
-
-/usr/include/sys/select.h:
-
-/usr/include/bits/select.h:
-
-/usr/include/bits/sigset.h:
-
-/usr/include/bits/time.h:
-
-/usr/include/sys/sysmacros.h:
-
-/usr/include/bits/pthreadtypes.h:
-
-/usr/include/alloca.h:
-
-/usr/include/bits/stdlib-float.h:
-
-/usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/limits.h:
-
-/usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/syslimits.h:
-
-/usr/include/limits.h:
-
-/usr/include/bits/posix1_lim.h:
-
-/usr/include/bits/local_lim.h:
-
-/usr/include/linux/limits.h:
-
-/usr/include/bits/posix2_lim.h:
-
-/usr/include/bits/xopen_lim.h:
-
-/usr/include/bits/stdio_lim.h:
+c:\mingw\include\limits.h:
 
 string.h:
 
-/usr/include/string.h:
+c:\mingw\include\string.h:
 
-/usr/include/bits/string.h:
+c:\mingw\include\strings.h:
 
-/usr/include/bits/string2.h:
+c:\mingw\include\wchar.h:
