--- a/linux/autotool/MinGW2/b64/autom4te.cache/traces.1
+++ b/linux/autotool/MinGW2/b64/autom4te.cache/traces.1
@@ -1,18 +1,21 @@
-m4trace:aclocal.m4:1150: -1- m4_include([m4/00gnulib.m4])
-m4trace:aclocal.m4:1151: -1- m4_include([m4/absolute-header.m4])
-m4trace:aclocal.m4:1152: -1- m4_include([m4/base64.m4])
-m4trace:aclocal.m4:1153: -1- m4_include([m4/extensions.m4])
-m4trace:aclocal.m4:1154: -1- m4_include([m4/extern-inline.m4])
-m4trace:aclocal.m4:1155: -1- m4_include([m4/gnulib-common.m4])
-m4trace:aclocal.m4:1156: -1- m4_include([m4/gnulib-comp.m4])
-m4trace:aclocal.m4:1157: -1- m4_include([m4/include_next.m4])
-m4trace:aclocal.m4:1158: -1- m4_include([m4/memchr.m4])
-m4trace:aclocal.m4:1159: -1- m4_include([m4/mmap-anon.m4])
-m4trace:aclocal.m4:1160: -1- m4_include([m4/stdbool.m4])
-m4trace:aclocal.m4:1161: -1- m4_include([m4/stddef_h.m4])
-m4trace:aclocal.m4:1162: -1- m4_include([m4/string_h.m4])
-m4trace:aclocal.m4:1163: -1- m4_include([m4/warn-on-use.m4])
-m4trace:aclocal.m4:1164: -1- m4_include([m4/wchar_t.m4])
+m4trace:aclocal.m4:681: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:681: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:681: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:1133: -1- m4_include([m4/00gnulib.m4])
+m4trace:aclocal.m4:1134: -1- m4_include([m4/absolute-header.m4])
+m4trace:aclocal.m4:1135: -1- m4_include([m4/base64.m4])
+m4trace:aclocal.m4:1136: -1- m4_include([m4/extensions.m4])
+m4trace:aclocal.m4:1137: -1- m4_include([m4/extern-inline.m4])
+m4trace:aclocal.m4:1138: -1- m4_include([m4/gnulib-common.m4])
+m4trace:aclocal.m4:1139: -1- m4_include([m4/gnulib-comp.m4])
+m4trace:aclocal.m4:1140: -1- m4_include([m4/include_next.m4])
+m4trace:aclocal.m4:1141: -1- m4_include([m4/memchr.m4])
+m4trace:aclocal.m4:1142: -1- m4_include([m4/mmap-anon.m4])
+m4trace:aclocal.m4:1143: -1- m4_include([m4/stdbool.m4])
+m4trace:aclocal.m4:1144: -1- m4_include([m4/stddef_h.m4])
+m4trace:aclocal.m4:1145: -1- m4_include([m4/string_h.m4])
+m4trace:aclocal.m4:1146: -1- m4_include([m4/warn-on-use.m4])
+m4trace:aclocal.m4:1147: -1- m4_include([m4/wchar_t.m4])
 m4trace:configure.ac:5: -1- AC_INIT([b64], [1.0], [b64-bugs@example.com])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
@@ -78,6 +81,9 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^sharedstatedir$])
 m4trace:configure.ac:5: -1- AC_SUBST([localstatedir], ['${prefix}/var'])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([localstatedir])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^localstatedir$])
+m4trace:configure.ac:5: -1- AC_SUBST([runstatedir], ['${localstatedir}/run'])
+m4trace:configure.ac:5: -1- AC_SUBST_TRACE([runstatedir])
+m4trace:configure.ac:5: -1- m4_pattern_allow([^runstatedir$])
 m4trace:configure.ac:5: -1- AC_SUBST([includedir], ['${prefix}/include'])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([includedir])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^includedir$])
@@ -163,7 +169,7 @@ m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE([subdir-objects foreign])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.14])
+m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.16.3])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -305,9 +311,6 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:12: -1- AC_SUBST([am__include])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:12: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:12: -1- AC_SUBST_TRACE([am__quote])
-m4trace:configure.ac:12: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:12: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:12: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([AMDEP_TRUE])
