--- a/gnuplot/epslatex/epslatex.tex
+++ b/gnuplot/epslatex/epslatex.tex
@@ -25,7 +25,8 @@ Your abstract.
 
 \begin{figure}[h]
 \centering
-\input{disp.tex}
+%\input{disp.tex}
+\scalebox{.5}{\input{disp.tex}}
 \caption{Monotomic chain dispersion relation}
       
 \end{figure}
