--- a/latex/math_book/files/0.0.testchap.tex
+++ b/latex/math_book/files/0.0.testchap.tex
@@ -13,9 +13,11 @@
 \input{list_ecc_curves.tex}
 \end{enumerate}
 
-\section{Derivation of the Black-Scholes Equation}
+\section{椭圆曲线的详情展示}
 
-The derivation of the Black-Scholes equation involves the use of Ito's Lemma and the concept of a risk-neutral portfolio. Consider a stock whose price \( S(t) \) follows the stochastic differential equation:
+\begin{enumerate}
+\input{all_ecc_infos.tex}
+\end{enumerate}
 
 \begin{equation}
     dS = \mu S dt + \sigma S dW
