--- a/latex/math_book/files/0.0.ecc_introduction.tex
+++ b/latex/math_book/files/0.0.ecc_introduction.tex
@@ -19,6 +19,9 @@
 \input{all_ecc_infos.tex}
 \end{enumerate}
 
+\section{椭圆曲线的绘图}
+\input{ecc_plot.tex}
+
 \begin{equation}
     dS = \mu S dt + \sigma S dW
 \end{equation}
@@ -206,6 +209,68 @@ Rho measures the sensitivity of the option price to changes in the risk-free int
 
 \section{Conclusion}
 
+%\begin{figure}{2.9in}
+%%\resizebox{2.5in}{!}{\input{r4}}
+%%\scalebox{.5}{\input{../Images/ecc_plot/r4.tex}}
+%\scalebox{.5}{\input{../Images/ecc_plot/r4.tex}}
+%%\scalebox{.5}{\input{r4}}
+%%\includegraphics{../Images/ecc_plot/r4}
+%\end{figure}
+%
+%\begin{figure}{2.9in}
+%%\resizebox{2.5in}{!}{\input{r4}}
+%%\scalebox{.5}{\input{../Images/ecc_plot/r4.tex}}
+%\scalebox{.5}{\input{../Images/ecc_plot/ecc_2_3.tex}}
+%%\scalebox{.5}{\input{r4}}
+%%\includegraphics{../Images/ecc_plot/r4}
+%\end{figure}
+
+%\begin{figure}[h]
+%%\resizebox{2.5in}{!}{\input{r4}}
+%%\scalebox{.5}{\input{../Images/ecc_plot/r4.tex}}
+%%\scalebox{.5}{\input{../Images/ecc_plot/r4.tex}}
+%%\scalebox{.5}{\input{r4}}
+%\includegraphics{../Images/ecc_plot/ecc_2_3}
+%\end{figure}
+%
+%\begin{figure}[!htbp]
+%\begin{minipage}{0.3\textwidth} \centering
+%\includegraphics{../Images/ecc_plot/ecc_2_3} 
+%%\caption{图表1}
+%\end{minipage}
+%\begin{minipage}{0.3\textwidth} \centering
+%\includegraphics{../Images/ecc_plot/ecc_2_3} 
+%%\caption{图表2}
+%\end{minipage}
+%\begin{minipage}{0.3\textwidth} \centering
+%\includegraphics{../Images/ecc_plot/ecc_2_3} 
+%%\caption{图表3}
+%\end{minipage}
+%\end{figure}
+%\begin{figure}[!htbp]
+%\begin{minipage}{0.3\textwidth} \centering
+%\includegraphics{../Images/ecc_plot/ecc_2_3} 
+%%\caption{图表1}
+%\end{minipage}
+%\begin{minipage}{0.3\textwidth} \centering
+%\includegraphics{../Images/ecc_plot/ecc_2_3} 
+%%\caption{图表2}
+%\end{minipage}
+%\begin{minipage}{0.3\textwidth} \centering
+%\includegraphics{../Images/ecc_plot/ecc_2_3} 
+%%\caption{图表3}
+%\end{minipage}
+%\end{figure}
+%
+%Some text in this section. And here we insert the picture:
+%\begin{figure}[H]
+%  \centering
+%  \includegraphics{../Images/ecc_plot/ecc_2_3}
+%  \caption{This is the inserted picture.}
+%\end{figure}
+%More text after the picture.
+
 The Black-Scholes model is a fundamental tool in financial markets for pricing options. It provides insights into the behavior of option prices and the factors that affect them. Understanding the model and its derivations is crucial for anyone involved in finance.
+
 
 \end{document}
