--- a/cryptography/ecc_2025/sage.ipynb
+++ b/cryptography/ecc_2025/sage.ipynb
@@ -42,8 +42,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7ec7a104-6fd2-465a-bf14-8d82c470e1db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elliptic Curve defined by y^2 = x^3 + 2*x + 3 over Finite Field of size 263\n",
+      "270\n",
+      "[(0 : 1 : 0), (0 : 23 : 1), (0 : 240 : 1), (1 : 100 : 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sage.all import FiniteField \n",
+    "from sage.schemes.elliptic_curves.ell_finite_field import EllipticCurve_finite_field\n",
+    "from sage.schemes.elliptic_curves.ell_finite_field import EllipticCurve\n",
+    "\n",
+    "F = FiniteField(263)                  # Generate a finite field\n",
+    "C = EllipticCurve(F, [ 2, 3 ])        # Set a, b\n",
+    "sage: print(C)\n",
+    "sage: print(C.cardinality())                # Count number of points on curve\n",
+    "sage: print(C.points()[:4])                 # Show the first four points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b331a2ac-ee1a-4e10-8be1-541a843aefad",
    "metadata": {},
    "outputs": [],
    "source": []
