--- a/cryptography/ecc_2025/openssl_ecc.ipynb
+++ b/cryptography/ecc_2025/openssl_ecc.ipynb
@@ -1237,11 +1237,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "id": "fa58f857-0f09-4766-8263-b91e97d3e21c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0xb9c7077daaa55acf00048bca3c5d04d053a5a4e48c32c88e6776ccc275c94daf 0x473a9dbea3fb3ebcb43797a9583c634fd205c7d87469b0e4f2a5d3f6a794f424\n",
+      "0x2918ff816bc989d1ea74e028c1666427415f256f40180a02a9e567f0f798fea8 0x83792abab0da686f911ec250ddcb160fa6b6a2d7df6b4be714ee86aae0911e3b\n",
+      "kE_reverse 0x5105572929f94d861b78ad58ca0695e3aca5aca415f06585f6667dbe2d4e3d9\n",
+      "('0x2918ff816bc989d1ea74e028c1666427415f256f40180a02a9e567f0f798fea8', '0x40c179e97daa0888698cd5c657cb6693d3ec881679f02727e94f67b93a025b30')\n",
+      "xp:--- 0x2918ff816bc989d1ea74e028c1666427415f256f40180a02a9e567f0f798fea8\n",
+      "r:--- 0x2918ff816bc989d1ea74e028c1666427415f256f40180a02a9e567f0f798fea8\n",
+      "success\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 这个算法不错 是欧几里得扩展算法\n",
+    "def extended_gcd(aa, bb):\n",
+    "    lastremainder, remainder = abs(aa), abs(bb)\n",
+    "    x, lastx, y, lasty = 0, 1, 1, 0\n",
+    "    while remainder:\n",
+    "        lastremainder, (quotient, remainder) = remainder, divmod(lastremainder, remainder)\n",
+    "        x, lastx = lastx - quotient*x, x\n",
+    "        y, lasty = lasty - quotient*y, y\n",
+    "    return lastremainder, lastx * (-1 if aa < 0 else 1), lasty * (-1 if bb < 0 else 1)\n",
+    "\n",
+    "def modinv(a, m):\n",
+    "    g, x, y = extended_gcd(a, m)\n",
+    "    if g != 1:\n",
+    "        raise ValueError\n",
+    "    return x % m\n",
+    "\n",
+    "# 然后用 算法实现\n",
+    "def ecc_double(x1,y1):\n",
+    "    s=((3*(x1**2)+a)*modinv(2*y1,p))%p\n",
+    "    x3=(s**2-x1-x1)%p\n",
+    "    y3=(s*(x1-x3)-y1)%p\n",
+    "    return (x3,y3)\n",
+    "\n",
+    "def ecc_add(x1,y1,x2,y2):\n",
+    "    s = 0\n",
+    "    if (x1==x2):\n",
+    "        s=((3*(x1**2)+a)*modinv(2*y1,p))%p\n",
+    "    else:\n",
+    "        s=((y2-y1)*modinv(x2-x1,p))%p\n",
+    "    x3=(s**2-x1-x2)%p\n",
+    "    y3=(s*(x1-x3)-y1)%p\n",
+    "    return (x3,y3)\n",
+    "def ecc_cal(x1,y1,priv):\n",
+    "    (x3,y3)=(0,0)\n",
+    "    (x_tmp,y_tmp)=(x1,y1)\n",
+    "    init=0  #初始化设置\n",
+    "    for b in str(bin(priv)[2:]):\n",
+    "        #print b\n",
+    "        if (b=='1') and (init==0):\n",
+    "           init=1\n",
+    "        elif (b=='1') and (init==1):\n",
+    "           (x3,y3)=ecc_double(x_tmp,y_tmp)\n",
+    "           (x3,y3)=ecc_add(x1,y1,x3,y3)\n",
+    "           (x_tmp, y_tmp) = (x3,y3)\n",
+    "        else:\n",
+    "           (x3,y3)=ecc_double(x_tmp,y_tmp)\n",
+    "           (x_tmp, y_tmp) = (x3,y3)\n",
+    "    return (x3, y3)\n",
+    "\n",
+    "\n",
+    "#(p,a,b,q,A,B)   B为公钥\n",
+    "# (d)为私钥\n",
+    "# 曲线的p a b 上面已经给出\n",
+    "def signature(priv, hashx, xa, ya):\n",
+    "    # 选择d的值 , d即为私钥\n",
+    "    d = priv\n",
+    "    # 计算B=dA B即为公钥\n",
+    "    (xb, yb) = ecc_cal(xa,ya,d)\n",
+    "    # 这个其实就是公钥\n",
+    "    print(hex(xb),hex(yb))\n",
+    "\n",
+    "    # 对hashx进行签名\n",
+    "    # 选择一个整数作为临时随机密钥为kE = 0xabcdef123456\n",
+    "    #R=kE* A\n",
+    "    kE = 0xabcdef123456\n",
+    "    (xR, yR) = ecc_cal(xa,ya,kE)\n",
+    "\n",
+    "    print(hex(xR),hex(yR))\n",
+    "        #('0xe47c00b663b8f07eab08999d5bc02402d9f3129b77c1d049ecafea57345f1e80L', '0x8960e3b957cd2176eb574146d3b9c33b64fd7e999f5e490de703951110e3c0e3L')\n",
+    "    r=xR   # 0xe47c00b663b8f07eab08999d5bc02402d9f3129b77c1d049ecafea57345f1e80L\n",
+    "    # 计算kE 的逆元\n",
+    "    kE_reverse=modinv(kE, q)\n",
+    "    print(\"kE_reverse\", hex(kE_reverse))\n",
+    "    s=((hashx+d*r)*kE_reverse)%q\n",
+    "    return (r,s)\n",
+    "def verify_sign(r, s, hashx, q, xa, ya):\n",
+    "    s_reverse=modinv(s, q)\n",
+    "    w=s_reverse%q\n",
+    "    u1=(w*hashx)%q\n",
+    "    u2=(w*r)%q\n",
+    "    #P=u1*A+u2*B\n",
+    "    (u1A_x, u1A_y)=ecc_cal(xa,ya,u1)\n",
+    "    (u2B_x, u2B_y)=ecc_cal(xb,yb,u2)\n",
+    "    (xp, yp) = ecc_add(u1A_x,u1A_y,u2B_x,u2B_y)\n",
+    "    return (xp, yp)\n",
+    "if __name__ == '__main__':\n",
+    "    # 这是参数 Prime:\n",
+    "    p=2**256 - 2**32 - 977\n",
+    "    a=0\n",
+    "    b=7\n",
+    "    # 这是私钥\n",
+    "    priv = 0xea628ae24b0a6852fc55f8a40bf07fa9a9e3be78d76359671f2c4aa2e695ca20\n",
+    "    #这个即为素数阶 q\n",
+    "    q=0x00fffffffffffffffffffffffffffffffebaaedce6af48a03bbfd25e8cd0364141\n",
+    "    # 这个是生成元\n",
+    "    xa=0x79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798\n",
+    "    ya=0x483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8\n",
+    "    # 这个是公钥\n",
+    "    xb=0xb9c7077daaa55acf00048bca3c5d04d053a5a4e48c32c88e6776ccc275c94daf\n",
+    "    yb=0x473a9dbea3fb3ebcb43797a9583c634fd205c7d87469b0e4f2a5d3f6a794f424\n",
+    "    # 对 hashx进行签名\n",
+    "    hashx=0x8d8351fcd1f284e5f22e4c60886911cc104fc302bd5debe4ea6bfbea1cd34684\n",
+    "\n",
+    "    # 用私钥 签名\n",
+    "    (r,s) = signature(priv, hashx, xa, ya)\n",
+    "    print((hex(r), hex(s)))\n",
+    "\n",
+    "    (xp,yp)=verify_sign(r,s,hashx, q, xa, ya)\n",
+    "    print(\"xp:---\", hex(xp))\n",
+    "    print(\"r:---\", hex(r))\n",
+    "\n",
+    "    if xp==r:\n",
+    "        print(\"success\")\n",
+    "    else:\n",
+    "        print(\"failed\")\n"
+   ]
   },
   {
    "cell_type": "code",
